[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scene/Area/Bush.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/Snake/Snake.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/Area/Tree.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/GrassBackground.png" type="Texture" id=4]
[ext_resource path="res://World/DirtTileset.png" type="Texture" id=5]
[ext_resource path="res://World/CliffTileset.png" type="Texture" id=6]
[ext_resource path="res://src/img/UI/Pause/home.png" type="Texture" id=7]
[ext_resource path="res://Scene/Area/Grass.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scene/Collection/Collection.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scene/Area/Continue.gd" type="Script" id=10]
[ext_resource path="res://Scene/Area/PauseButton.gd" type="Script" id=11]
[ext_resource path="res://Scene/Area/Pause.gd" type="Script" id=12]
[ext_resource path="res://Scene/Area/GeneralStatus.gd" type="Script" id=13]
[ext_resource path="res://src/img/UI/Pause/pause.png" type="Texture" id=14]
[ext_resource path="res://src/img/UI/Pause/continue.png" type="Texture" id=15]
[ext_resource path="res://Scene/Area/ContinueClock.gd" type="Script" id=16]
[ext_resource path="res://Scene/Area/Clock.gd" type="Script" id=17]
[ext_resource path="res://src/img/UI/Clock/number.tres" type="SpriteFrames" id=18]

[sub_resource type="TileSet" id=1]
0/name = "DirtTileset.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 176, 80 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 3 ), 48, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 56, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 3 ), 24, Vector2( 3, 0 ), 144, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 18, Vector2( 3, 3 ), 16, Vector2( 4, 0 ), 176, Vector2( 4, 1 ), 182, Vector2( 4, 2 ), 434, Vector2( 4, 3 ), 50, Vector2( 4, 4 ), 178, Vector2( 5, 0 ), 248, Vector2( 5, 1 ), 255, Vector2( 5, 2 ), 507, Vector2( 5, 3 ), 59, Vector2( 5, 4 ), 251, Vector2( 6, 0 ), 440, Vector2( 6, 1 ), 447, Vector2( 6, 2 ), 510, Vector2( 6, 3 ), 62, Vector2( 6, 4 ), 446, Vector2( 7, 0 ), 152, Vector2( 7, 1 ), 155, Vector2( 7, 2 ), 218, Vector2( 7, 3 ), 26, Vector2( 7, 4 ), 154, Vector2( 8, 0 ), 184, Vector2( 8, 1 ), 191, Vector2( 8, 2 ), 506, Vector2( 8, 3 ), 58, Vector2( 8, 4 ), 186, Vector2( 9, 0 ), 443, Vector2( 9, 1 ), 254, Vector2( 9, 2 ), 442, Vector2( 9, 3 ), 190, Vector2( 10, 2 ), 250, Vector2( 10, 3 ), 187 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "CliffTileset.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 352, 160 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 3 ), 48, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 56, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 3 ), 24, Vector2( 3, 0 ), 144, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 18, Vector2( 3, 3 ), 16, Vector2( 4, 0 ), 176, Vector2( 4, 1 ), 182, Vector2( 4, 2 ), 434, Vector2( 4, 3 ), 50, Vector2( 4, 4 ), 178, Vector2( 5, 0 ), 248, Vector2( 5, 1 ), 255, Vector2( 5, 2 ), 507, Vector2( 5, 3 ), 59, Vector2( 5, 4 ), 251, Vector2( 6, 0 ), 440, Vector2( 6, 1 ), 447, Vector2( 6, 2 ), 510, Vector2( 6, 3 ), 62, Vector2( 6, 4 ), 446, Vector2( 7, 0 ), 152, Vector2( 7, 1 ), 155, Vector2( 7, 2 ), 218, Vector2( 7, 3 ), 26, Vector2( 7, 4 ), 154, Vector2( 8, 0 ), 184, Vector2( 8, 1 ), 191, Vector2( 8, 2 ), 506, Vector2( 8, 3 ), 58, Vector2( 8, 4 ), 186, Vector2( 9, 0 ), 187, Vector2( 9, 1 ), 214, Vector2( 9, 2 ), 442, Vector2( 9, 3 ), 190, Vector2( 10, 2 ), 250, Vector2( 10, 3 ), 187 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Theme" id=3]

[node name="world" type="Node2D"]

[node name="Map1" type="Node2D" parent="."]

[node name="GrassBackground" type="Sprite" parent="Map1"]
position = Vector2( 0, 1 )
scale = Vector2( 2.00391, 2.5 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 511, 256 )

[node name="DirtyRoad" type="TileMap" parent="Map1"]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 4, 0, 0, 5, 0, 2, 11, 0, 0, 12, 0, 1, 13, 0, 2, 21, 0, 0, 22, 0, 2, 65540, 0, 65536, 65541, 0, 131077, 65542, 0, 2, 65547, 0, 65536, 65548, 0, 65537, 65549, 0, 65538, 65557, 0, 65536, 65558, 0, 65538, 131076, 0, 131072, 131077, 0, 65542, 131078, 0, 65538, 131083, 0, 65536, 131084, 0, 65537, 131085, 0, 65538, 131093, 0, 65536, 131094, 0, 65538, 196613, 0, 131072, 196614, 0, 9, 196615, 0, 2, 196619, 0, 65536, 196620, 0, 65537, 196621, 0, 65538, 196629, 0, 65536, 196630, 0, 65538, 262150, 0, 131072, 262151, 0, 9, 262152, 0, 1, 262153, 0, 1, 262154, 0, 1, 262155, 0, 131078, 262156, 0, 65537, 262157, 0, 65538, 262165, 0, 65536, 262166, 0, 65538, 262172, 0, 0, 262173, 0, 1, 262174, 0, 1, 262175, 0, 2, 327687, 0, 131072, 327688, 0, 131073, 327689, 0, 131073, 327690, 0, 131073, 327691, 0, 131073, 327692, 0, 65542, 327693, 0, 65538, 327696, 0, 0, 327697, 0, 5, 327698, 0, 196609, 327699, 0, 196609, 327700, 0, 196609, 327701, 0, 262150, 327702, 0, 65538, 327706, 0, 0, 327707, 0, 1, 327708, 0, 65545, 327709, 0, 131073, 327710, 0, 131073, 327711, 0, 131074, 393228, 0, 65536, 393229, 0, 65538, 393232, 0, 65536, 393233, 0, 65538, 393237, 0, 65536, 393238, 0, 65538, 393242, 0, 65540, 393243, 0, 131073, 393244, 0, 131074, 458764, 0, 65536, 458765, 0, 131077, 458766, 0, 1, 458767, 0, 1, 458768, 0, 131078, 458769, 0, 65538, 458773, 0, 65536, 458774, 0, 131077, 458775, 0, 1, 458776, 0, 1, 458777, 0, 1, 458778, 0, 131079, 524300, 0, 65536, 524301, 0, 65541, 524302, 0, 131073, 524303, 0, 131073, 524304, 0, 131073, 524305, 0, 131074, 524309, 0, 65536, 524310, 0, 65537, 524311, 0, 65541, 524312, 0, 131073, 524313, 0, 131073, 524314, 0, 131074, 589836, 0, 65536, 589837, 0, 65538, 589845, 0, 131072, 589846, 0, 65542, 589847, 0, 65538, 655360, 0, 0, 655361, 0, 1, 655362, 0, 1, 655363, 0, 1, 655364, 0, 1, 655365, 0, 1, 655366, 0, 1, 655367, 0, 1, 655368, 0, 1, 655369, 0, 1, 655370, 0, 1, 655371, 0, 1, 655372, 0, 131078, 655373, 0, 131077, 655374, 0, 1, 655375, 0, 2, 655382, 0, 65536, 655383, 0, 131077, 655384, 0, 2, 720896, 0, 131072, 720897, 0, 131073, 720898, 0, 131073, 720899, 0, 131073, 720900, 0, 131073, 720901, 0, 131073, 720902, 0, 131073, 720903, 0, 131073, 720904, 0, 131073, 720905, 0, 131073, 720906, 0, 65542, 720907, 0, 65541, 720908, 0, 131073, 720909, 0, 131073, 720910, 0, 65542, 720911, 0, 65538, 720918, 0, 65536, 720919, 0, 65537, 720920, 0, 131077, 720921, 0, 1, 720922, 0, 2, 786442, 0, 65536, 786443, 0, 65538, 786446, 0, 65536, 786447, 0, 131077, 786448, 0, 1, 786449, 0, 1, 786450, 0, 1, 786451, 0, 1, 786452, 0, 1, 786453, 0, 1, 786454, 0, 131078, 786455, 0, 65537, 786456, 0, 65537, 786457, 0, 65537, 786458, 0, 131077, 786459, 0, 2, 851978, 0, 65536, 851979, 0, 131079, 851982, 0, 131072, 851983, 0, 131073, 851984, 0, 131073, 851985, 0, 131073, 851986, 0, 131073, 851987, 0, 131073, 851988, 0, 131073, 851989, 0, 131073, 851990, 0, 131073, 851991, 0, 131073, 851992, 0, 131073, 851993, 0, 131073, 851994, 0, 131073, 851995, 0, 9, 851996, 0, 1, 851997, 0, 2, 917514, 0, 65536, 917515, 0, 65543, 917531, 0, 131072, 917532, 0, 131073, 917533, 0, 9, 917534, 0, 1, 917535, 0, 2, 983050, 0, 131072, 983051, 0, 131074, 983069, 0, 131072, 983070, 0, 131073, 983071, 0, 131074 )

[node name="Cliff" type="TileMap" parent="Map1"]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 4, 1, 0, 196610, 8, 0, 0, 9, 0, 2, 12, 0, 4, 13, 0, 196609, 14, 0, 196609, 15, 0, 196610, 65536, 0, 131075, 65544, 0, 131072, 65545, 0, 131074, 65548, 0, 131075, 196608, 0, 0, 196609, 0, 5, 196610, 0, 196609, 196611, 0, 196610, 262144, 0, 131072, 262145, 0, 131074, 262158, 0, 0, 262159, 0, 2, 327688, 0, 196608, 327689, 0, 196609, 327690, 0, 196610, 327694, 0, 131072, 327695, 0, 131074, 393216, 0, 0, 393217, 0, 2, 458752, 0, 131072, 458753, 0, 196613, 458754, 0, 196610, 458759, 0, 196608, 458760, 0, 196609, 458761, 0, 196609, 458762, 0, 196609, 458763, 0, 196609, 458764, 0, 196610, 917512, 0, 196608, 917513, 0, 196609, 917514, 0, 196609, 917515, 0, 196609, 917516, 0, 196609, 917517, 0, 196610 )

[node name="Cliff_Area2D" type="Area2D" parent="Map1/Cliff"]

[node name="Trees" type="Node2D" parent="Map1"]

[node name="Tree" parent="Map1/Trees" instance=ExtResource( 3 )]
position = Vector2( 161, 40 )

[node name="Tree2" parent="Map1/Trees" instance=ExtResource( 3 )]
position = Vector2( 176, 136 )

[node name="Tree3" parent="Map1/Trees" instance=ExtResource( 3 )]
position = Vector2( 312, 121 )

[node name="Bushes" type="Node2D" parent="Map1"]

[node name="Bush" parent="Map1/Bushes" instance=ExtResource( 1 )]
position = Vector2( 242, 95 )

[node name="Bush2" parent="Map1/Bushes" instance=ExtResource( 1 )]
position = Vector2( 383, 97 )

[node name="Bush3" parent="Map1/Bushes" instance=ExtResource( 1 )]
position = Vector2( 66, 63 )

[node name="Grasses" type="Node2D" parent="Map1"]

[node name="Grass" parent="Map1/Grasses" instance=ExtResource( 8 )]
position = Vector2( 146, 207 )

[node name="Grass2" parent="Map1/Grasses" instance=ExtResource( 8 )]
position = Vector2( 205, 207 )

[node name="Grass3" parent="Map1/Grasses" instance=ExtResource( 8 )]
position = Vector2( 464, 53 )

[node name="Snake" parent="." instance=ExtResource( 2 )]
position = Vector2( 16, 16 )

[node name="Collection" parent="." instance=ExtResource( 9 )]

[node name="UI" type="Node2D" parent="."]

[node name="Clock" type="Control" parent="UI"]
visible = false
margin_left = 451.0
margin_top = 270.0
margin_right = 551.0
margin_bottom = 370.0
script = ExtResource( 17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="UI/Clock"]
frames = ExtResource( 18 )
centered = false

[node name="Pause" type="Control" parent="UI"]
pause_mode = 2
visible = false
margin_right = 1024.0
margin_bottom = 640.0
script = ExtResource( 12 )

[node name="PauseColorRect" type="ColorRect" parent="UI/Pause"]
margin_right = 1024.0
margin_bottom = 642.0
color = Color( 0, 0, 0, 0.27451 )

[node name="BackToHome" type="Button" parent="UI/Pause"]
margin_left = 704.0
margin_top = 576.0
margin_right = 768.0
margin_bottom = 640.0
theme = SubResource( 3 )
icon = ExtResource( 7 )
icon_align = 1

[node name="Continue" type="Button" parent="UI/Pause"]
margin_left = 832.0
margin_top = 576.0
margin_right = 896.0
margin_bottom = 640.0
icon = ExtResource( 15 )
icon_align = 1
script = ExtResource( 10 )

[node name="ContinueClock" type="Timer" parent="UI/Pause/Continue"]
script = ExtResource( 16 )

[node name="GeneralStatus" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 13 )

[node name="PauseButton" type="Button" parent="UI/GeneralStatus"]
margin_left = 960.0
margin_right = 1024.0
margin_bottom = 64.0
icon = ExtResource( 14 )
icon_align = 1
script = ExtResource( 11 )

[connection signal="off_ticker" from="UI/Pause/Continue" to="UI/Clock" method="_on_Continue_off_ticker"]
[connection signal="pause_end" from="UI/Pause/Continue" to="UI/Clock" method="_on_Continue_pause_end"]
[connection signal="pause_end" from="UI/Pause/Continue" to="UI/GeneralStatus" method="_on_Continue_pause_end"]
[connection signal="pressed" from="UI/Pause/Continue" to="UI/Pause/Continue" method="_on_Continue_pressed"]
[connection signal="ticker" from="UI/Pause/Continue" to="UI/Clock" method="_on_Continue_ticker"]
[connection signal="timeout" from="UI/Pause/Continue/ContinueClock" to="UI/Pause/Continue" method="_on_ContinueClock_timeout"]
[connection signal="pause_start" from="UI/GeneralStatus/PauseButton" to="UI/Pause" method="_on_PauseButton_pause_start"]
[connection signal="pressed" from="UI/GeneralStatus/PauseButton" to="UI/GeneralStatus/PauseButton" method="_on_PauseButton_pressed"]
